여기어때 제작

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
             <div>
                 <h1 class="img_text">국내부터 해외까지 여기어때</h1>
                 <div class="search_bar">
+
                     <div class="search_text">
                         <span>국내 숙소</span>
                         <span>해외 숙소</span>
                         <span>패키지 여행</span>
                     </div>
+
                     <input type="text" placeholder="여행지나 숙소를 검색해보세요.">
                     <input type="date" class="date">
                     <button class="person">인원 3</button>
@@ -34,6 +36,85 @@
                 </div>
             </div>
         </section>
+
+        <div class="event_plus">
+            <span class="event">이벤트</span>
+            <a href="#" class="plus">더보기</a>
+        </div>
+
+        <div class="event_img">
+            <div class="ev_img"></div>
+            <div class="ev_img"></div>
+            <div class="ev_img"></div>
+        </div>
+
+        <span class="travel_dest">패키지 인기 여행지</span>
+        
+        <div class="tvd_img">
+            <div class="td_img"></div>
+            <div class="td_img"></div>
+            <div class="td_img"></div>
+            <div class="td_img"></div>
+            <div class="td_img"></div>
+            <div class="td_img"></div>
+        </div>
+
+        <ul class="tvd_text">
+            <li class="td_text">나트랑</li>
+            <li class="td_text">다낭</li>
+            <li class="td_text">장가계</li>
+            <li class="td_text">오사카</li>
+            <li class="td_text">삿포로</li>
+            <li class="td_text">파리</li>
+        </ul>
+
+        <span class="travel_dest">국내 인기 여행지</span>
+        <div class="tvd_img">
+            <div class="td_img"></div>
+            <div class="td_img"></div>
+            <div class="td_img"></div>
+            <div class="td_img"></div>
+            <div class="td_img"></div>
+            <div class="td_img"></div>
+        </div>
+
+        <ul class="tvd_text">
+            <li class="td_text">제주도</li>
+            <li class="td_text">서울</li>
+            <li class="td_text">부산</li>
+            <li class="td_text">강릉</li>
+            <li class="td_text">인천</li>
+            <li class="td_text">경주</li>
+        </ul>
+
+        <span class="travel_dest">해외 인기 여행지</span>
+        <div class="tvd_img">
+            <div class="td_img"></div>
+            <div class="td_img"></div>
+            <div class="td_img"></div>
+            <div class="td_img"></div>
+            <div class="td_img"></div>
+            <div class="td_img"></div>
+        </div>
+
+        <ul class="tvd_text">
+            <li class="td_text">오사카</li>
+            <li class="td_text">도쿄 / 동경</li>
+            <li class="td_text">나트랑 / 나짱</li>
+            <li class="td_text">후쿠오카</li>
+            <li class="td_text">다낭</li>
+            <li class="td_text">괌</li>
+        </ul>
+
+        <div class="benefit">
+            <h1 class="membership">회원가입만 해도 받는 엘리트 멤버십 혜택</h1>
+            <span class="if_login">로그인 하면 멤버십 할인가로 예약할 수 있어요.</span>
+            <div class="benefit_nav">
+                <button class="bf_login">로그인/회원가입</button>
+                <a href="#" class="bf_look">혜택 자세히 보기</a>
+            </div>
+            <img src="./elite_img_PC.webp" alt="멤버십" class="benefit_img">
+        </div>
     </main>
 </body>
 </html>
